--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<h1>Hello World</h1>
+<p>
+    What's up I'm Nathan Teall 
+    I went to Newburgh Free Academy 
+    I enjoy listening to music and playing the piano.
+</p>
+<img src = https://tenor.com/view/big-buger-eat-buger-the-rock-burger-gif-22532545></img>
+<ul>
+    <li>I'm excited to be able to build a project start to finish</li>
+    <li>I like working with my team</li>
+    <li>I'm excited to learn the technical skills to be able to create our project</li>
+</ul>
