--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     I went to Newburgh Free Academy 
     I enjoy listening to music and playing the piano.
 </p>
-<img src = https://tenor.com/view/big-buger-eat-buger-the-rock-burger-gif-22532545></img>
+<img src = http://www.supersizedmeals.com/food/images/articles/20060528040203644_2.jpg>
 <ul>
     <li>I'm excited to be able to build a project start to finish</li>
     <li>I like working with my team</li>
