--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <h1>Hello World</h1>
 <p>
     What's up I'm Nathan Teall 
-    I went to Newburgh Free Academy 
-    I enjoy listening to music and playing the piano.
+    \nI went to Newburgh Free Academy 
+    \nI enjoy listening to music and playing the piano.
 </p>
 <img src = http://www.supersizedmeals.com/food/images/articles/20060528040203644_2.jpg>
 <ul>
